--- a/GAMELIFE/GAMELIFE.entitlements
+++ b/GAMELIFE/GAMELIFE.entitlements
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>com.apple.developer.family-controls</key>
+	<true/>
+	<key>com.apple.developer.healthkit</key>
+	<true/>
+	<key>com.apple.developer.healthkit.background-delivery</key>
+	<true/>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
 		<string>iCloud.marcshaw.GAMELIFE</string>
@@ -10,15 +16,11 @@
 	<array>
 		<string>CloudKit</string>
 	</array>
-	<key>com.apple.developer.family-controls</key>
-	<true/>
-	<key>com.apple.developer.healthkit</key>
-	<true/>
-	<key>com.apple.developer.healthkit.background-delivery</key>
-	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
+		<string>group.CY-76895D00-E4EE-11E6-BB3F-DF1A35B5EABE.lolwtf</string>
 		<string>group.com.gamelife.shared</string>
+		<string>group.CY-4C94E384-13C9-11E7-AF6C-7BDC6BF6710D.snapchat.picaboo</string>
 	</array>
 </dict>
 </plist>
